--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>complete responsive coffee shop website design</title>
 
-    <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+ 
+    <link rel="stylesheet" href="main.css">
 
 </head>
 <body>
-    
-<!-- header section starts  -->
 
 <header class="header">
 
@@ -33,10 +30,6 @@
 
 </header>
 
-<!-- header section ends -->
-
-<!-- home section starts  -->
-
 <section class="home" id="home">
 
     <div class="content">
@@ -46,10 +39,6 @@
     </div>
 
 </section>
-
-<!-- home section ends -->
-
-<!-- about section starts  -->
 
 <section class="about" id="about">
 
@@ -72,10 +61,6 @@
     </div>
 
 </section>
-
-<!-- about section ends -->
-
-<!-- skills section starts  -->
 
 <section class="skills" id="skills">
 
@@ -123,7 +108,6 @@
 
 </section>
 
-<!-- skills section ends -->
 
 <section class="project" id="project">
 
@@ -134,8 +118,6 @@
 
 </section>
 
-<!-- contact section starts  -->
-
 <section class="contact" id="contact">
 
     <h1 class="heading"> <span>contact</span></h1>
@@ -143,10 +125,6 @@
 
 </section>
 
-<!-- contact section ends -->
-
-
-<!-- footer section starts  -->
 
 <section class="footer">
 
@@ -170,9 +148,8 @@
 
 </section>
 
-<!-- footer section ends -->
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
+
+<script src="main.js"></script>
 
 </body>
 </html>
