--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <h1 class="heading"> my <span>project</span> </h1>
     <p>My first project is Martial Arts Game.<br><br>Click the link below to experience it.</p>
-    <br><p><a href="url"> click to open</a></p><br>
+    <br><p><a href="https://bhavan-kumar.github.io/game_sim/"> click to open</a></p><br>
     
 
 </section>
